# holdout

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  run.sh
.cmake/api/v1/reply/: cache-v2-d58ca98c795f4c6ad259.json  cmakeFiles-v1-882934daf1f436836e3f.json  codemodel-v2-5084fdcf5d3794638de5.json  index-2024-01-04T07-17-15-0227.json  target-raylib_game-Debug-71b89b9fa696a6c8a4d6.json
assets/: waves  waves.txt
assets/maps/: map1  map1.tmf  map2.tmf  map3.tmf  tenbytenwireframe.tmf
assets/soundfx/peaks/: basicTowerShot.wav.reapeaks  flamethrowerShot.wav.reapeaks  railgunShot.wav.reapeaks
experimental/: firt_experiment.cpp  test.cpp
holdout/: holdout
holdout/assets/maps/: map_main
holdout/assets/soundfx/peaks/: crossbowShot.wav.reapeaks  gameLoop.wav.reapeaks
include/: AssetServer.hpp  GameManager.hpp  UI.hpp  Vec2.hpp  baseTile.hpp  enemies.hpp  gameUI.hpp  main.hpp  map.hpp  projectiles.hpp  raygui.h  tiles.hpp  towers.hpp  waves.hpp  wireframeTile.hpp
src/: AssetServer.cpp  GameManager.cpp  UI.cpp  Vec2.cpp  baseTile.cpp  enemies.cpp  gameUI.cpp  main.cpp  map.cpp  projectiles.cpp  tiles.cpp  towers.cpp  waves.cpp  wireframeTile.cpp
